--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@fontsource/roboto": "^5.1.1",
     "@tailwindcss/vite": "^4.0.6",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
